fix visual ordering on mobile for River content

--- a/src/River/River.module.css
+++ b/src/River/River.module.css
@@ -7,6 +7,7 @@
 
 .River__visual {
   position: relative;
+  order: 2;
 }
 
 .River--align-center {
@@ -69,6 +70,7 @@
 
   .River__visual {
     grid-area: visual;
+    order: unset;
   }
 
   .River--align-center {
